feat(audio-capture): Add audio level metering and server initialization
- Add RMS accumulator to AudioCaptureProcessor for real-time audio level calculation
- Include audio level (0..1 range) in audio_chunk messages sent to main thread
- Add visual audio level meter UI component with responsive scaling and clipping indicator
- Display audio level bar during recording state with red highlight when clipping (RMS > 0.3)
- Update audio level meter on each audio chunk received from worklet
- Implement server initialization in index.ts with dotenv configuration and port binding
- Fix package.json main entry point and start script to reference dist/index.js
- Audio level metering provides real-time visual feedback for microphone input quality

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "description": "AI Toastmasters Evaluator MVP - captures live speech, transcribes, computes metrics, generates evaluation, and delivers via TTS",
   "type": "module",
-  "main": "dist/server.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "node dist/index.js",
     "dev": "tsc --watch",
     "test": "vitest run",
     "test:watch": "vitest"
